--- a/pharmaccess.bib
+++ b/pharmaccess.bib
@@ -359,6 +359,13 @@
   file = {/Users/dkapitan/Zotero/storage/VG7R3FJK/digitalpublicgoods.net.html}
 }
 
+@misc{digitalsquare2020instantopenhie,
+  title = {Advancing {{Instant OpenHIE}} {\textbar} {{Digital Square Open Application Platform}}},
+  urldate = {2024-04-02},
+  howpublished = {https://applications.digitalsquare.io/content/advancing-instant-openhie},
+  file = {/Users/dkapitan/Zotero/storage/5LWY3225/advancing-instant-openhie.html}
+}
+
 @inproceedings{duboc2006framework,
   title = {A Framework for Modelling and Analysis of Software Systems Scalability},
   booktitle = {Proceedings of the 28th International Conference on {{Software}} Engineering},
@@ -1556,6 +1563,17 @@
   abstract = {Kenya like other developing countries is faced with a burden of disease aggravated by poverty. Communicable and non- communicable diseases are increasing at an alarming rate and straining already overburdened and weak heath systems. Faced with a rapidly growing population, poorly equipped health workforce and meager resources to support the healthcare systems, there is a continuous search for tools to offer better healthcare in these resource constrained settings. ICT for development is one tool that has been adopted to improve access to quality healthcare for populations in resource constrained settings. While the tool has been shown to impact the health care sector positively, the use of ICT has brought in challenges of interoperability and usability of electronic systems in health. In this paper we investigate how Kenya has utilized ICT to spur development in the health sector and the measures she is undertaking to address these challenges. We advance that ICT for development is a tool that needs to be fully exploited by developing countries in order to bridge gaps in healthcare emanating from limited finances, poor infrastructure and an over-stretched healthcare workforce.},
   langid = {english},
   file = {/Users/dkapitan/Zotero/storage/DGPT5ND7/Thaiya et al. - Adoption of ICT to Enhance Access to Healthcare in.pdf}
+}
+
+@misc{tsafnat2024converge,
+  title = {Converge or Collide? {{Making}} Sense of a Plethora of Open Data Standards in Healthcare: An Editorial},
+  shorttitle = {Converge or Collide?},
+  author = {Tsafnat, G and Dunscombe, R and Gabriel, D and Grieve, G and Reich, C},
+  year = {2024},
+  urldate = {2024-04-02},
+  abstract = {Journal of Medical Internet Research - International Scientific Journal for Medical Research, Information and Communication on the Internet},
+  langid = {english},
+  file = {/Users/dkapitan/Zotero/storage/7H8IUUJX/2024 - Converge or collide Making sense of a plethora of.pdf;/Users/dkapitan/Zotero/storage/DALAJ775/55779.html}
 }
 
 @misc{tzhea2020,
