--- a/index.tex
+++ b/index.tex
@@ -1168,6 +1168,15 @@ layer?}\label{the-need-to-a-semantic-layer}
   Since we use FHIR, we don't need a semantic layer because that is
   already provided
 \item
+  We do need different semantic layer, namely with metrics. Explain
+  different types of semantics.
+
+  \begin{itemize}
+  \tightlist
+  \item
+    The metrics layer same function as CQL. Discuss CQL vs generic
+    metrics layer.
+  \end{itemize}
 \end{itemize}
 
 \subsection{Attribute-based access
