Add evaluation dimensions in Methods section

--- a/index.tex
+++ b/index.tex
@@ -403,16 +403,26 @@ to include the four types of data sharing mentioned above. Using the
 full-STAC approach \citep{mehl2023fullstac} we combine open standards,
 open technologies and open architectures into a coherent modular HDP
 platform that can be configured and reused across a variety of
-use-cases. Subsequently, we employ a formative, naturalistic evaluation
-to assess the technical risk and efficacy of the design
-\citep{venable2016feds}. Given that it is prohibitively expensive to
-evaluate the design a real-world setting, we aim to minimize
-technological risks and maximize the efficacy of the design by
-considering three examples of health data platforms in LMICs, namely i)
-the OpenHIM platform (\url{https://jembi.gitbook.io/openhim-platform/});
-ii) the ONA Canopy platform \url{https://ona.io/home/services/canopy/};
-and iii) the work conducted at PharmAccess Foundation as part of the
-MomCare programme (\url{https://health-data-commons.pharmaccess.org}).
+use-cases. We employ a formative, naturalistic evaluation to assess the
+technical risk and efficacy of the design \citep{venable2016feds}. Given
+that it is prohibitively expensive to evaluate the design a real-world
+setting, we aim to minimize technological risks and maximize the
+efficacy of the design by considering three examples of health data
+platforms in LMICs, namely:
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\tightlist
+\item
+  the OpenHIM platform
+  (\url{https://jembi.gitbook.io/openhim-platform/})
+\item
+  the ONA Canopy platform \url{https://ona.io/home/services/canopy/}
+\item
+  the work conducted at PharmAccess Foundation as part of the MomCare
+  programme (\url{https://health-data-commons.pharmaccess.org}).
+\end{enumerate}
+
 As part of our design research, we have taken a narrative approach in
 surveying existing scientific studies on health data platforms, focusing
 on the seminal reports and subsequently searching forward citations. In
